Bug 122460 - FILESAVE: DOC: Header/Footer are lost saving section to .doc format
Summary: FILESAVE: DOC: Header/Footer are lost saving section to .doc format
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords:
Depends on:
Blocks: DOC-Header-Footer
  Show dependency treegraph
 
Reported: 2019-01-04 07:46 UTC by Justin L
Modified: 2019-06-04 17:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
section_losesHeaderFooter.odt: save as .doc format and the header/footer is lost. (9.52 KB, application/vnd.oasis.opendocument.text)
2019-01-04 07:46 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2019-01-04 07:46:10 UTC
Created attachment 147987 [details]
section_losesHeaderFooter.odt: save as .doc format and the header/footer is lost.

The header/footer are lost when saving to .doc format from this simple .odt file. Bibisect43all suggests that this is inherited from OOo. It works for .docx (as of LO5.0) and .rtf formats.

Please note that this is probably different from bug 122429 and bug 122431 because this is also lost in LO, not just in Word.

The DOCX part was fixed for bug 78606 by commit https://cgit.freedesktop.org/libreoffice/core/commit/?id=f10ab3425f02a4caea22b2bdbf60a731bd059419&h=master
Comment 1 Dieter 2019-01-04 08:50:38 UTC
Reproducible with

Version: 6.3.0.0.alpha0+ (x64)
Build ID: ffa5b8a82eab18041bbee4d6914892b82c7801d3
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-12-19_03:24:54
Locale: en-US (de_DE); UI-Language: en-US
Calc: threaded
Comment 2 Justin L 2019-01-04 17:39:47 UTC
proposed fix at https://gerrit.libreoffice.org/65859
Comment 3 Commit Notification 2019-01-08 19:19:54 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/13ed75dd3f84d38cce8f46792af560a5090ec180%5E%21

tdf#122460 ww8export: always export H/F to first section

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-01-31 09:27:34 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/dd5743f18ba9a32695bbc92c21dee2ff87d41308%5E%21

tdf#122460 ww8export: always export H/F to first section

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 BogdanB 2019-06-04 17:15:00 UTC
Verified. Nothing is lost now.

Version: 6.3.0.0.beta1
Build ID: a187af327633f5f00363be5131bd21a13e0f1a7b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded