tdf#122460 ww8export: always export H/F to first section

Normally the first section is considered a BreakCode == 2,
which guarantees that the headers/footers will attempt
to be written.
In the cases where it isn't, the very first section
definitely needs to include any possible Headers/Footers.

This was already done for DOCX via bug 78606 in LO 5.0.

Both DOCX and RTF seem to ignore this first aSect,
so this change won't affect them.

Change-Id: Ie08eedea9202f0922e0e505a92fe4a66ef6c4a24
Reviewed-on: https://gerrit.libreoffice.org/65859
Tested-by: Jenkins
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-on: https://gerrit.libreoffice.org/66060
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>